--- a/landing 2/index.html
+++ b/landing 2/index.html
@@ -14,12 +14,12 @@
         <div class="container-fluid">
             <div class="row brgRow mr-auto">
                 <div class="col-lg-2">
-                    <img src="../img/brg.png" alt="menu">
+                    <img src="img/brg.png" alt="menu">
                 </div>
             </div>
             <div class="row d-flex justify-content-center logoRow">
                 <div class="col-lg-5 col-md-2">
-                    <img src="../img/logo.png" alt="">
+                    <img src="img/logo.png" alt="">
                 </div>
             </div>
                 <div class="w-100"></div>
@@ -63,8 +63,8 @@
             <div class="row food1-row">
                 <div class="col-12 d-flex">
                     <div class="col-lg-6 food-img-con d-flex flex-column">
-                        <img src="../img/ff.jpg" alt="">
-                        <img src="../img/ff2.jpg" alt="">
+                        <img src="img/ff.jpg" alt="">
+                        <img src="img/ff2.jpg" alt="">
                     </div>
                     <div class="col-lg-5 main-food-desc">
                         <h2 class="food-title">Fast Food</h2>
@@ -79,8 +79,8 @@
             <div class="row food1-row food2-row">
                 <div class="col-12 d-flex flex-row-reverse">
                     <div class="col-lg-6 food-img-con d-flex">
-                        <img src="../img/drnks2.jpg" alt="">
-                        <img src="../img/drnks.jpg" alt="">
+                        <img src="img/drnks2.jpg" alt="">
+                        <img src="img/drnks.jpg" alt="">
                     </div>
                     <div class="col-lg-5 main-food-desc main-food-desc2">
                         <h2 class="food-title">Drinks</h2>
@@ -106,7 +106,7 @@
                         <h3 id="frth-ff-menu" class="col-3 ff-menu align-self-center">Rice</h3>
                     </div>
                     <div class="col-12 d-flex slider-container justify-content-center">
-                        <img id="arw-1" class="align-self-center arw-l" src="../img/arw-left.png" alt="">
+                        <img id="arw-1" class="align-self-center arw-l" src="img/arw-left.png" alt="">
                         <div class="col-4 img-desc-con d-flex justify-content-center flex-column align-items-center">
                             <img class="align-self-center cr-pht-1" src="img/cr-pht1.jpg" alt="" width="280" height="220">
                             <p class="img-desc">Chicken burger</p>
@@ -119,7 +119,7 @@
                             <img class="align-self-center cr-pht-1" src="img/pz.jpg" alt="" height="220" width="280">
                             <p class="img-desc">Chicken pizza</p>
                         </div>
-                        <img class="align-self-center arw-r" src="../img/arw-right.png" alt="">
+                        <img class="align-self-center arw-r" src="img/arw-right.png" alt="">
                     </div>
                 </div>
             </div>
