--- a/landing 1/index.html
+++ b/landing 1/index.html
@@ -272,9 +272,8 @@
             </div>
             <div class="developers">
                 <div class="developers-container">
-
                     <div class="pht-dev-container">
-                        <img src="/img/1dev.jpg" alt="">
+                        <img src="img/1dev.jpg" alt="">
                     </div>
 
                     <div class="selves-desc-container">
